[package]
name = "webview_test123"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = { version = "0.6.0", features = ["std"] }
tao = { version = "0.24.0", features = ["rwh_05"] }
tao-macros = "0.1.2"
winit = { version = "0.29.9", features = ["rwh_05"] }
wry = "0.35.2"
